# IrisSearch

./: LICENSE.md  Makefile  README.md  TODO.md  dune-project  is.opam
.github/workflows/: build-ubuntu.yml
src/: ast.ml  dune  internal.ml  internal.mli  internal_iprop.ml  internal_iprop.mli  main.ml  multiset.ml  multiset.mli  search.ml  search.mli  set.ml  set.mli  state.ml  state.mli  statistics.ml  statistics.mli  test.ml  test_z3.ml
src/basics/: ast.ml  internal.ml  internal.mli  internal_operations.ml  internal_operations.mli  multiplicity.ml  multiplicity.mli  pattern_match.ml  pattern_match.mli  transform.ml  type.ml  validate.ml
src/data_structures/: branch.ml  interned_string.ml  interned_string.mli  map.ml  map.mli  multiplicity.ml  multiplicity.mli  multiset.ml  multiset.mli  priority_queue.ml  priority_queue.mli  set.ml  set.mli
src/definitions/: ast.ml  internal.ml  multiplicity.ml  multiplicity.mli
src/parser/: dune  lexer.mll  parser.mly
src/proof_search/: branch.ml  duplication_checker.ml  edge_info.ml  edge_info.mli  main.ml  path.ml  redundancy_checker.ml  redundancy_checker.mli  search.ml  search.mli  state.ml  state.mli  state_operations.ml  state_operations.mli  subsumption_checker.ml
src/solvers/: equality_solver.ml  persistent_solver.ml  term_equality_solver.ml  z3_intf.ml  z3_intf.mli
src/utils/: freshname.ml  freshname.mli  monads.ml  statistics.ml  statistics.mli
test/: diseq1  diseq1.t  diseq2  diseq2.t  dune  equality1  equality1.t  exclusive1  exclusive1.t  exclusive2  exclusive2.t  gen_heap1  gen_heap1.t  gen_heap2  gen_heap2.t  input1  input2  input3  input4  law_trans1  law_trans1.t  law_trans2  law_trans2.t  locals  locals.t  negative  negative.t  negative1  persistent1  persistent1.t  persistent2  persistent2.t  persistent3  persistent3.t  predicate1  predicate1.t  predicate2  predicate2.t  sections  simple1  (+12 more)
test/fuzzing/: dune  freshname.ml  freshname.mli  fuzzer.ml  negative.ml
test/parsing/: consts1  consts2  disj  dune  (+20 more)
(+36 files in other folders)
