opam-version: "2.0"
name: "is"
version: "1.0"
maintainer: ["Zhicheng Hui <zhicheng.hui@inria.fr>"]
authors: [
  "Zhicheng Hui <zhicheng.hui@inria.fr>"
]
homepage: "https://github.com/Laplace-Demon/IrisSearch"
bug-reports: "https://github.com/Laplace-Demon/IrisSearch/issues"
license: "MIT"
synopsis: "Proof Searching in Iris"
depends: [
  "baby"
  "menhir" {>= "20240715"}
  "ocamlformat"
  "unionFind"
  "z3"
]
build: [
  ["dune" "build" "-p" name]
]
