(include_subdirs unqualified)

(library
 (public_name is)
 (modules
  ast
  duplication_checker
  equality_solver
  persistent_solver
  freshname
  internal
  internal_operations
  interned_string
  main
  map
  monads
  multiset
  multiplicity
  lexer
  parser
  search
  set
  state
  state_operations
  statistics
  transform
  type
  validate)
 (libraries baby menhirLib unionFind)
 (flags
  (:standard -w -a)))
