(include_subdirs unqualified)

(library
 (public_name is)
 (modules
  ast
  edge_info
  equality_solver
  path
  persistent_solver
  priority_queue
  freshname
  internal
  internal_operations
  interned_string
  main
  map
  monads
  multiset
  multiplicity
  lexer
  parser
  pattern_match
  redundancy_checker
  search
  set
  state
  state_operations
  statistics
  term_equality_solver
  transform
  type
  validate
  z3_intf)
 (libraries baby menhirLib unionFind z3)
 (flags
  (:standard -w -a)))
